src/summary/LongitudinalTable.scss
@import "../styles/variables";

.table-header {
    padding-left: 10px !important;
    padding-right: 10px !important;
    min-width: 60px;
}
.table-scrollable {
    // overflow-x: scroll !important;
    overflow: hidden;
}
.name {
    &:hover {
        color: #028DEA !important;
        cursor: pointer !important;
        background-color: $feature-gray !important;
    }
}
.star-clicked {
    color: #028DEA !important;
}
.star-hovered {
    color: #b3b3b3 !important;
}
.star-cell {
    padding-left: 0px !important;
    padding-right: 0px !important;
    text-align: center !important;
    min-width: 30px !important;
}
.left-table {
    float: left;
}

